// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post<Tabs> a remaining tab renders correctly when not selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "left": -5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderLeftColor": "transparent",
        "borderLeftWidth": 10,
        "borderStyle": "solid",
        "borderTopColor": "rgba(255, 255, 255, 0.30)",
        "borderTopWidth": 46,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.30)",
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      delayLongPress={600}
      extraButtonProps={
        Object {
          "rippleColor": "transparent",
        }
      }
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "marginVertical": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <Badge
          left={65}
          number={23}
        />
        <customIcon
          colour="rgba(51,51,51,0.65)"
          name="comments"
          size={30}
          style={
            Object {
              "alignSelf": "center",
            }
          }
        />
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "rgba(255, 255, 255, 0.30)",
        "borderBottomWidth": 46,
        "borderRightColor": "transparent",
        "borderRightWidth": 10,
        "borderStyle": "solid",
      }
    }
  />
</View>
`;

exports[`Post<Tabs> a remaining tab renders correctly when selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "left": -5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderLeftColor": "transparent",
        "borderLeftWidth": 10,
        "borderStyle": "solid",
        "borderTopColor": "rgba(255, 255, 255, 0.70)",
        "borderTopWidth": 46,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.70)",
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      delayLongPress={600}
      extraButtonProps={
        Object {
          "rippleColor": "transparent",
        }
      }
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "marginVertical": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <Badge
          left={65}
          number={23}
        />
        <customIcon
          colour={null}
          name="comments"
          size={30}
          style={
            Object {
              "alignSelf": "center",
            }
          }
        />
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "rgba(255, 255, 255, 0.70)",
        "borderBottomWidth": 46,
        "borderRightColor": "transparent",
        "borderRightWidth": 10,
        "borderStyle": "solid",
      }
    }
  />
</View>
`;

exports[`Post<Tabs> first tab renders correctly when not selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "left": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.30)",
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      delayLongPress={600}
      extraButtonProps={
        Object {
          "rippleColor": "transparent",
        }
      }
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "marginVertical": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <Badge
          left={65}
          number={null}
        />
        <customIcon
          colour="rgba(51,51,51,0.65)"
          name="image"
          size={30}
          style={
            Object {
              "alignSelf": "center",
            }
          }
        />
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "rgba(255, 255, 255, 0.30)",
        "borderBottomWidth": 46,
        "borderRightColor": "transparent",
        "borderRightWidth": 10,
        "borderStyle": "solid",
      }
    }
  />
</View>
`;

exports[`Post<Tabs> first tab renders correctly when selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "left": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.70)",
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      delayLongPress={600}
      extraButtonProps={
        Object {
          "rippleColor": "transparent",
        }
      }
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "marginVertical": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <Badge
          left={65}
          number={null}
        />
        <customIcon
          colour={null}
          name="image"
          size={30}
          style={
            Object {
              "alignSelf": "center",
            }
          }
        />
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "rgba(255, 255, 255, 0.70)",
        "borderBottomWidth": 46,
        "borderRightColor": "transparent",
        "borderRightWidth": 10,
        "borderStyle": "solid",
      }
    }
  />
</View>
`;
